# foveatedvits

./: .gitignore  README.md  pyproject.toml
foveatedvits/modeling/: siglip.py
foveatedvits/scripts/: foveated_siglip.py  rendering_tiers.py
foveatedvits/utils/: image_utils.py  siglip_loader.py  video_procressing_utils.py
