[build-system]
requires = ["flit_core >= 3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "foveatedvits"
version = "0.1.0"
description = "Turn ViT from uniform resolution to foveated"
readme = "README.md"
requires-python = ">=3.10, <3.12"
dependencies = [
    "flax==0.10.2",
    "jax[cuda12]==0.5.3",
    "jaxtyping==0.2.36",
    "einops>=0.8.0",
    "imageio[ffmpeg]",
    "requests",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["foveatedvits*"]

[project.urls]
Repository = "https://github.com/uynitsuj/foveatedvits"

[tool.flit.module]
name = "foveatedvits"

[tool.ruff]
line-length = 119 # Set the max line length to 119 characters.
# keep in alphabetical order
lint.select = [
    "ANN",  # annotations
    "B",  # bugbear rules
    "E",  # pycodestyle errors.
    "F",  # Pyflakes rules.
    "PLC",  # Pylint convention warnings.
    "PLE",  # Pylint errors.
    "PLR",  # Pylint refactor recommendations.
    "PLW",  # Pylint warnings.
    "I",  # Import sorting.
    "RUF"  # Ruff rules.
]
# keep in alphabetical/numerical order
lint.ignore = [
    "ANN002",
    "ANN003",
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
    "E402",
    "E501",
    "E741", # Ambiguous variable name. (l, O, or I)
    "F405",
    "F841",
    "PLC0414",  # Import alias does not rename variable. (this is used for exporting names)
    "PLC1901",  # Use falsey strings.
    "PLR0911",  # Too many return statements.
    "PLR0912",  # Too many branches.
    "PLR0913",  # Too many arguments.
    "PLR0915",  # Too many statements.
    "PLR1722",
    "PLR2004",  # Magic value used in comparison.
    "PLW0603",  # Global statement updates are discouraged.
    "PLW2901",  # For loop variable overwritten.
    "RUF001",
    "RUF009"
]
lint.extend-select = ["E501"]
exclude = ["*.ipynb", "dependencies/*"]

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = false

[tool.pyright]
pythonVersion = "3.12"
ignore = ["foveatedvits/scripts/**"]

reportMissingImports = "none"
reportAttributeAccessIssue = "none"

[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "def __repr__",
]
omit = [
    "*exceptions.py",
]

[dependency-groups]
dev = [
    "ruff>=0.12.3",
]

[tool.ruff.lint.flake8-annotations]
ignore-fully-untyped = true
suppress-none-returning = true
suppress-dummy-args = true
mypy-init-return = true
allow-star-arg-any = true
